--- a/mindex.html
+++ b/mindex.html
@@ -1410,6 +1410,15 @@
                     { text: "Philips", correct: false, image: "images/philips.jpg" },
                     { text: "Wilkinson", correct: false, image: "images/wilkinson.jpg" }
                 ]
+            },
+            {
+                question: "Крутящие землю",
+                answers: [
+                    { text: "Ralf Ringer", correct: true, image: "images/ralf.jpg" },
+                    { text: "Ecco", correct: false, image: "images/ecco.jpg" },
+                    { text: "Camelot", correct: false, image: "images/camelot.jpg" },
+                    { text: "Salamander", correct: false, image: "images/salamander.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
