--- a/mindex.html
+++ b/mindex.html
@@ -1419,6 +1419,15 @@
                     { text: "Camelot", correct: false, image: "images/camelot.jpg" },
                     { text: "Salamander", correct: false, image: "images/salamander.jpg" }
                 ]
+            },
+            {
+                question: "Оставь свой след",
+                answers: [
+                    { text: "Camelot", correct: true, image: "images/camelot2.jpg" },
+                    { text: "Ecco", correct: false, image: "images/ecco2.jpg" },
+                    { text: "Ralf Ringer", correct: false, image: "images/ralf2.jpg" },
+                    { text: "Geox", correct: false, image: "images/geox2.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
