--- a/mindex.html
+++ b/mindex.html
@@ -1428,6 +1428,15 @@
                     { text: "Ralf Ringer", correct: false, image: "images/ralf2.jpg" },
                     { text: "Geox", correct: false, image: "images/geox2.jpg" }
                 ]
+            },
+            {
+                question: "Обувь для жизни",
+                answers: [
+                    { text: "Ecco", correct: true, image: "images/ecco4.jpg" },
+                    { text: "Ralf Ringer", correct: false, image: "images/ralf4.jpg" },
+                    { text: "Camelot", correct: false, image: "images/camelot4.jpg" },
+                    { text: "Salamander", correct: false, image: "images/salamander4.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
