--- a/mindex.html
+++ b/mindex.html
@@ -1437,6 +1437,15 @@
                     { text: "Camelot", correct: false, image: "images/camelot4.jpg" },
                     { text: "Salamander", correct: false, image: "images/salamander4.jpg" }
                 ]
+            },
+            {
+                question: "Свобода быть собой",
+                answers: [
+                    { text: "Savage", correct: true, image: "images/savage.jpg" },
+                    { text: "Zara", correct: false, image: "images/zara.jpg" },
+                    { text: "H&M", correct: false, image: "images/hm.jpg" },
+                    { text: "Reserved", correct: false, image: "images/reserved.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
