--- a/mindex.html
+++ b/mindex.html
@@ -1446,6 +1446,15 @@
                     { text: "H&M", correct: false, image: "images/hm.jpg" },
                     { text: "Reserved", correct: false, image: "images/reserved.jpg" }
                 ]
+            },
+            {
+                question: "Будет как было!",
+                answers: [
+                    { text: "МАКС", correct: true, image: "images/maks.jpg" },
+                    { text: "Росгосстрах", correct: false, image: "images/rosstrakh.jpg" },
+                    { text: "Спасские ворота", correct: false, image: "images/spassvorota.jpg" },
+                    { text: "Ренессанс Страхование", correct: false, image: "images/renss.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
