--- a/mindex.html
+++ b/mindex.html
@@ -1455,6 +1455,15 @@
                     { text: "Спасские ворота", correct: false, image: "images/spassvorota.jpg" },
                     { text: "Ренессанс Страхование", correct: false, image: "images/renss.jpg" }
                 ]
+            },
+            {
+                question: "Как за каменной стеной",
+                answers: [
+                    { text: "Спасские ворота", correct: true, image: "images/spassvorota2.jpg" },				
+                    { text: "МАКС", correct: false, image: "images/maks2.jpg" },
+                    { text: "Росгосстрах", correct: false, image: "images/rosstrakh2.jpg" },
+                    { text: "Ренессанс Страхование", correct: false, image: "images/renss2.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
