--- a/mindex.html
+++ b/mindex.html
@@ -1464,6 +1464,15 @@
                     { text: "Росгосстрах", correct: false, image: "images/rosstrakh2.jpg" },
                     { text: "Ренессанс Страхование", correct: false, image: "images/renss2.jpg" }
                 ]
+            },
+            {
+                question: "Всё правильно сделал!",
+                answers: [
+                    { text: "Росгосстрах", correct: true, image: "images/rosstrakh3.jpg" },				
+                    { text: "МАКС", correct: false, image: "images/maks3.jpg" },
+                    { text: "Спасские ворота", correct: false, image: "images/spassvorota3.jpg" },
+                    { text: "Ренессанс Страхование", correct: false, image: "images/renss3.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
