--- a/mindex.html
+++ b/mindex.html
@@ -1473,6 +1473,15 @@
                     { text: "Спасские ворота", correct: false, image: "images/spassvorota3.jpg" },
                     { text: "Ренессанс Страхование", correct: false, image: "images/renss3.jpg" }
                 ]
+            },
+            {
+                question: "Искусство помнить о будущем",
+                answers: [
+                    { text: "Ренессанс Страхование", correct: true, image: "images/renss4.jpg" },				
+                    { text: "МАКС", correct: false, image: "images/maks4.jpg" },
+                    { text: "Спасские ворота", correct: false, image: "images/spassvorota4.jpg" },
+                    { text: "Росгосстрах", correct: false, image: "images/rosstrakh4.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
