--- a/mindex.html
+++ b/mindex.html
@@ -1482,6 +1482,15 @@
                     { text: "Спасские ворота", correct: false, image: "images/spassvorota4.jpg" },
                     { text: "Росгосстрах", correct: false, image: "images/rosstrakh4.jpg" }
                 ]
+            },
+            {
+                question: "Всё будет в шоколаде",
+                answers: [
+                    { text: "Mars", correct: true, image: "images/mars.jpg" },				
+                    { text: "Snickers", correct: false, image: "images/snikers.jpg" },
+                    { text: "Bounty", correct: false, image: "images/bounty.jpg" },
+                    { text: "Twix", correct: false, image: "images/twix.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
