--- a/mindex.html
+++ b/mindex.html
@@ -1491,6 +1491,15 @@
                     { text: "Bounty", correct: false, image: "images/bounty.jpg" },
                     { text: "Twix", correct: false, image: "images/twix.jpg" }
                 ]
+            },
+            {
+                question: "Свежее дыхание облегчает понимание",
+                answers: [
+                    { text: "Рондо", correct: true, image: "images/rondo4.jpg" },				
+                    { text: "Orbit", correct: false, image: "images/orbit4.jpg" },
+                    { text: "Dirol", correct: false, image: "images/dirol4.jpg" },
+                    { text: "Stimorol", correct: false, image: "images/stimorol4.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
