--- a/mindex.html
+++ b/mindex.html
@@ -1500,6 +1500,15 @@
                     { text: "Dirol", correct: false, image: "images/dirol4.jpg" },
                     { text: "Stimorol", correct: false, image: "images/stimorol4.jpg" }
                 ]
+            },
+            {
+                question: "Свежее решение",
+                answers: [
+                    { text: "Mentos", correct: true, image: "images/mentos4.jpg" },				
+                    { text: "Orbit", correct: false, image: "images/orbit4.jpg" },
+                    { text: "Dirol", correct: false, image: "images/dirol4.jpg" },
+                    { text: "Eclipse", correct: false, image: "images/eclipse4.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
