--- a/mindex.html
+++ b/mindex.html
@@ -1509,7 +1509,16 @@
                     { text: "Dirol", correct: false, image: "images/dirol4.jpg" },
                     { text: "Eclipse", correct: false, image: "images/eclipse4.jpg" }
                 ]
-            },			
+            },
+            {
+                question: "Жевать не переживать",
+                answers: [
+                    { text: "Chewits", correct: true, image: "images/chewits5.jpg" },				
+                    { text: "Orbit", correct: false, image: "images/orbit5.jpg" },
+                    { text: "Dirol", correct: false, image: "images/dirol5.jpg" },
+                    { text: "Stimorol", correct: false, image: "images/stimorol5.jpg" }
+                ]
+            },				
             {
 				question: "Цены просто о*уеть",
 					answers: [
