--- a/mindex.html
+++ b/mindex.html
@@ -1518,7 +1518,16 @@
                     { text: "Dirol", correct: false, image: "images/dirol5.jpg" },
                     { text: "Stimorol", correct: false, image: "images/stimorol5.jpg" }
                 ]
-            },				
+            },
+            {
+                question: "Не кисни — на радуге зависни",
+                answers: [
+                    { text: "Skittles", correct: true, image: "images/skittles5.jpg" },				
+                    { text: "M&M’s", correct: false, image: "images/mmdms5.jpg" },
+                    { text: "Starburst", correct: false, image: "images/starburst5.jpg" },
+                    { text: "Haribo", correct: false, image: "images/haribo5.jpg" }
+                ]
+            },			
             {
 				question: "Цены просто о*уеть",
 					answers: [
