--- a/mindex.html
+++ b/mindex.html
@@ -1527,6 +1527,15 @@
                     { text: "Starburst", correct: false, image: "images/starburst5.jpg" },
                     { text: "Haribo", correct: false, image: "images/haribo5.jpg" }
                 ]
+            },
+            {
+                question: "Теперь банановый!",
+                answers: [
+                    { text: "Dirol Kids", correct: true, image: "images/dirol6.jpg" },				
+                    { text: "Orbit", correct: false, image: "images/orbit6.jpg" },
+                    { text: "Big Babol", correct: false, image: "images/babol6.jpg" },
+                    { text: "Trolli", correct: false, image: "images/trolli6.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
