--- a/mindex.html
+++ b/mindex.html
@@ -1536,6 +1536,15 @@
                     { text: "Big Babol", correct: false, image: "images/babol6.jpg" },
                     { text: "Trolli", correct: false, image: "images/trolli6.jpg" }
                 ]
+            },
+            {
+                question: "Райское наслаждение",
+                answers: [
+                    { text: "Bounty", correct: true, image: "images/bounty7.jpg" },				
+                    { text: "Mars", correct: false, image: "images/mars.jpg" },
+                    { text: "Snickers", correct: false, image: "images/snikers7.jpg" },
+                    { text: "Twix", correct: false, image: "images/twix7.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
