--- a/mindex.html
+++ b/mindex.html
@@ -1545,6 +1545,15 @@
                     { text: "Snickers", correct: false, image: "images/snikers7.jpg" },
                     { text: "Twix", correct: false, image: "images/twix7.jpg" }
                 ]
+            },
+            {
+                question: "Уже хочу!",
+                answers: [
+                    { text: "Juicy Fruit", correct: true, image: "images/juicyfruit7.jpg" },				
+                    { text: "Orbit", correct: false, image: "images/orbit7.jpg" },
+                    { text: "Dirol", correct: false, image: "images/dirol7.jpg" },
+                    { text: "Stimorol", correct: false, image: "images/stimorol7.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
