--- a/mindex.html
+++ b/mindex.html
@@ -1554,6 +1554,15 @@
                     { text: "Dirol", correct: false, image: "images/dirol7.jpg" },
                     { text: "Stimorol", correct: false, image: "images/stimorol7.jpg" }
                 ]
+            },
+            {
+                question: "Где наслаждение, там я",
+                answers: [
+                    { text: "Я", correct: true, image: "images/ya8.jpg" },				
+                    { text: "Добрый", correct: false, image: "images/dobriy8.jpg" },
+                    { text: "Rich", correct: false, image: "images/rich8.jpg" },
+                    { text: "Привет", correct: false, image: "images/privet8.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
