--- a/mindex.html
+++ b/mindex.html
@@ -1563,6 +1563,15 @@
                     { text: "Rich", correct: false, image: "images/rich8.jpg" },
                     { text: "Привет", correct: false, image: "images/privet8.jpg" }
                 ]
+            },
+            {
+                question: "Полный Бананас!",
+                answers: [
+                    { text: "Juicy Fruit", correct: true, image: "images/juicyfruit9.jpg" },				
+                    { text: "Orbit", correct: false, image: "images/orbit9.jpg" },
+                    { text: "Dirol", correct: false, image: "images/dirol9.jpg" },
+                    { text: "Stimorol", correct: false, image: "images/stimorol9.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
