--- a/mindex.html
+++ b/mindex.html
@@ -1572,6 +1572,15 @@
                     { text: "Dirol", correct: false, image: "images/dirol9.jpg" },
                     { text: "Stimorol", correct: false, image: "images/stimorol9.jpg" }
                 ]
+            },
+            {
+                question: "Заряжай мозги",
+                answers: [
+                    { text: "Nuts", correct: true, image: "images/nuts8.jpg" },				
+                    { text: "Snickers", correct: false, image: "images/snikers8.jpg" },
+                    { text: "Mars", correct: false, image: "images/mars8.jpg" },
+                    { text: "Bounty", correct: false, image: "images/bounty8.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
