--- a/mindex.html
+++ b/mindex.html
@@ -1581,6 +1581,15 @@
                     { text: "Mars", correct: false, image: "images/mars8.jpg" },
                     { text: "Bounty", correct: false, image: "images/bounty8.jpg" }
                 ]
+            },
+            {
+                question: "Съел — и порядок!",
+                answers: [
+                    { text: "Snickers", correct: true, image: "images/snikers.jpg" },				
+                    { text: "Mars", correct: false, image: "images/mars.jpg" },
+                    { text: "Twix", correct: false, image: "images/twix7.jpg" },
+                    { text: "Bounty", correct: false, image: "images/bounty.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
