--- a/mindex.html
+++ b/mindex.html
@@ -1590,6 +1590,15 @@
                     { text: "Twix", correct: false, image: "images/twix7.jpg" },
                     { text: "Bounty", correct: false, image: "images/bounty.jpg" }
                 ]
+            },
+            {
+                question: "Всё дело в волшебных пузырьках",
+                answers: [
+                    { text: "Wispa", correct: true, image: "images/wispa10.jpg" },				
+                    { text: "Aero", correct: false, image: "images/aero10.jpg" },
+                    { text: "Milky Way", correct: false, image: "images/milkyway10.jpg" },
+                    { text: "Twix", correct: false, image: "images/twix10.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
