--- a/mindex.html
+++ b/mindex.html
@@ -1599,6 +1599,15 @@
                     { text: "Milky Way", correct: false, image: "images/milkyway10.jpg" },
                     { text: "Twix", correct: false, image: "images/twix10.jpg" }
                 ]
+            },
+            {
+                question: "И ты — победитель!",
+                answers: [
+                    { text: "Wagon Wheels", correct: true, image: "images/wagon9.jpg" },				
+                    { text: "Snickers", correct: false, image: "images/snikers9.jpg" },
+                    { text: "Mars", correct: false, image: "images/mars9.jpg" },
+                    { text: "Bounty", correct: false, image: "images/bounty9.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
