--- a/mindex.html
+++ b/mindex.html
@@ -1608,6 +1608,15 @@
                     { text: "Mars", correct: false, image: "images/mars9.jpg" },
                     { text: "Bounty", correct: false, image: "images/bounty9.jpg" }
                 ]
+            },
+            {
+                question: "У нас нет постоянных читателей",
+                answers: [
+                    { text: "Работа сегодня", correct: true, image: "images/rabota.jpg" },				
+                    { text: "КоммерсантЪ", correct: false, image: "images/kommersant.jpg" },
+                    { text: "Эхо Москвы", correct: false, image: "images/echo.jpg" },
+                    { text: "Русское радио", correct: false, image: "images/rusradio.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
