--- a/mindex.html
+++ b/mindex.html
@@ -1617,6 +1617,15 @@
                     { text: "Эхо Москвы", correct: false, image: "images/echo.jpg" },
                     { text: "Русское радио", correct: false, image: "images/rusradio.jpg" }
                 ]
+            },
+            {
+                question: "Слушайте радио, остальное — видимость",
+                answers: [
+                    { text: "Эхо Москвы", correct: true, image: "images/echo2.jpg" },				
+                    { text: "Русское радио", correct: false, image: "images/rusradio2.jpg" },
+                    { text: "Европа Плюс", correct: false, image: "images/europa2.jpg" },
+                    { text: "Радио Рекорд", correct: false, image: "images/record2.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
