--- a/mindex.html
+++ b/mindex.html
@@ -1626,6 +1626,15 @@
                     { text: "Европа Плюс", correct: false, image: "images/europa2.jpg" },
                     { text: "Радио Рекорд", correct: false, image: "images/record2.jpg" }
                 ]
+            },
+            {
+                question: "Все будет хорошо",
+                answers: [
+                    { text: "Русское радио", correct: true, image: "images/rusradio2.jpg" },				
+                    { text: "Love Radio", correct: false, image: "images/love2.jpg" },
+                    { text: "Европа Плюс", correct: false, image: "images/europa2.jpg" },
+                    { text: "DFM", correct: false, image: "images/dfm2.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
