--- a/mindex.html
+++ b/mindex.html
@@ -998,8 +998,7 @@
         // Массив всех вопросов
         const allQuestions = [
             {
-               // question: "Найдётся всё", 
-				question: "Для настоящего коммерсанта — 15 лет не срок",
+                question: "Найдётся всё",
                 answers: [
                     { text: "Яндекс", correct: true, image: "images/yandex.jpg" },
                     { text: "Google", correct: false, image: "images/google.jpg" },
