--- a/mindex.html
+++ b/mindex.html
@@ -1635,6 +1635,15 @@
                     { text: "Европа Плюс", correct: false, image: "images/europa2.jpg" },
                     { text: "DFM", correct: false, image: "images/dfm2.jpg" }
                 ]
+            },
+            {
+                question: "Почувствуй нашу любовь",
+                answers: [
+                    { text: "ТНТ", correct: true, image: "images/tnt.jpg" },				
+                    { text: "СТС", correct: false, image: "images/sts.jpg" },
+                    { text: "Пятница!", correct: false, image: "images/pyatnitsa.jpg" },
+                    { text: "Домашний", correct: false, image: "images/domashniy.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
