--- a/mindex.html
+++ b/mindex.html
@@ -1644,6 +1644,15 @@
                     { text: "Пятница!", correct: false, image: "images/pyatnitsa.jpg" },
                     { text: "Домашний", correct: false, image: "images/domashniy.jpg" }
                 ]
+            },
+            {
+                question: "Для настоящего коммерсанта — 15 лет не срок",
+                answers: [
+                    { text: "КоммерсантЪ", correct: true, image: "images/kommersant2.jpg" },				
+                    { text: "Ведомости", correct: false, image: "images/vedomosti2.jpg" },
+                    { text: "РБК", correct: false, image: "images/rbk2.jpg" },
+                    { text: "Forbes", correct: false, image: "images/forbes2.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
