--- a/mindex.html
+++ b/mindex.html
@@ -1653,6 +1653,15 @@
                     { text: "РБК", correct: false, image: "images/rbk2.jpg" },
                     { text: "Forbes", correct: false, image: "images/forbes2.jpg" }
                 ]
+            },
+            {
+                question: "Переходи на лучшее",
+                answers: [
+                    { text: "Перекрёсток", correct: true, image: "images/perekrestok.jpg" },				
+                    { text: "Пятёрочка", correct: false, image: "images/pyaterochka.jpg" },
+                    { text: "Магнит", correct: false, image: "images/magnit.jpg" },
+                    { text: "Лента", correct: false, image: "images/lenta.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
