--- a/mindex.html
+++ b/mindex.html
@@ -1662,6 +1662,15 @@
                     { text: "Магнит", correct: false, image: "images/magnit.jpg" },
                     { text: "Лента", correct: false, image: "images/lenta.jpg" }
                 ]
+            },
+            {
+                question: "Знаем людей, предлагаем решения",
+                answers: [
+                    { text: "Техносила", correct: true, image: "images/technosila2.jpg" },				
+                    { text: "М.Видео", correct: false, image: "images/mvideo2.jpg" },
+                    { text: "Эльдорадо", correct: false, image: "images/eldorado2.jpg" },
+                    { text: "DNS", correct: false, image: "images/dns2.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
