--- a/mindex.html
+++ b/mindex.html
@@ -1671,6 +1671,24 @@
                     { text: "Эльдорадо", correct: false, image: "images/eldorado2.jpg" },
                     { text: "DNS", correct: false, image: "images/dns2.jpg" }
                 ]
+            },
+            {
+                question: "Родина низких цен",
+                answers: [
+                    { text: "Эльдорадо", correct: true, image: "images/eldorado2.jpg" },				
+                    { text: "М.Видео", correct: false, image: "images/mvideo2.jpg" },
+                    { text: "Техносила", correct: false, image: "images/technosila2.jpg" },
+                    { text: "DNS", correct: false, image: "images/dns2.jpg" }
+                ]
+            },
+            {
+                question: "Магазины здравого смысла",
+                answers: [
+                    { text: "Техносила", correct: true, image: "images/technosila2.jpg" },				
+                    { text: "М.Видео", correct: false, image: "images/mvideo2.jpg" },
+                    { text: "Эльдорадо", correct: false, image: "images/eldorado2.jpg" },
+                    { text: "DNS", correct: false, image: "images/dns2.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
