--- a/mindex.html
+++ b/mindex.html
@@ -1689,6 +1689,15 @@
                     { text: "Эльдорадо", correct: false, image: "images/eldorado2.jpg" },
                     { text: "DNS", correct: false, image: "images/dns2.jpg" }
                 ]
+            },
+            {
+                question: "Вне политики! Вне конкуренции!",
+                answers: [
+                    { text: "Партия", correct: true, image: "images/partiya.jpg" },				
+                    { text: "Хортiца", correct: false, image: "images/hortitsa.jpg" },
+                    { text: "Хартия", correct: false, image: "images/hartiya.jpg" },
+                    { text: "Nemiroff", correct: false, image: "images/nemiroff.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
