--- a/mindex.html
+++ b/mindex.html
@@ -1698,6 +1698,15 @@
                     { text: "Хартия", correct: false, image: "images/hartiya.jpg" },
                     { text: "Nemiroff", correct: false, image: "images/nemiroff.jpg" }
                 ]
+            },
+            {
+                question: "А вы где одеваетесь?",
+                answers: [
+                    { text: "Снежная Королева", correct: true, image: "images/koroleva.jpg" },				
+                    { text: "Zara", correct: false, image: "images/zara.jpg" },
+                    { text: "H&M", correct: false, image: "images/hm.jpg" },
+                    { text: "Reserved", correct: false, image: "images/reserved.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
