--- a/mindex.html
+++ b/mindex.html
@@ -1142,6 +1142,15 @@
                 ]
             },
             {
+                question: "Мы работаем, вы отдыхаете",
+                answers: [
+                    { text: "Indesit", correct: true, image: "images/indesit.jpg" },				
+                    { text: "Bosch", correct: false, image: "images/bosch.jpg" },
+                    { text: "LG", correct: false, image: "images/lg.jpg" },
+                    { text: "Samsung", correct: false, image: "images/samsung.jpg" }
+                ]
+            },
+            {
                 question: "Заведи любимую",
                 answers: [
                     { text: "Daewoo", correct: true, image: "images/daewoo.jpg" },
