--- a/mindex.html
+++ b/mindex.html
@@ -1142,15 +1142,6 @@
                 ]
             },
             {
-                question: "Мы работаем, вы отдыхаете",
-                answers: [
-                    { text: "Indesit", correct: true, image: "images/indesit.jpg" },				
-                    { text: "Bosch", correct: false, image: "images/bosch.jpg" },
-                    { text: "LG", correct: false, image: "images/lg.jpg" },
-                    { text: "Samsung", correct: false, image: "images/samsung.jpg" }
-                ]
-            },
-            {
                 question: "Заведи любимую",
                 answers: [
                     { text: "Daewoo", correct: true, image: "images/daewoo.jpg" },
@@ -1715,6 +1706,33 @@
                     { text: "Zara", correct: false, image: "images/zara.jpg" },
                     { text: "H&M", correct: false, image: "images/hm.jpg" },
                     { text: "Reserved", correct: false, image: "images/reserved.jpg" }
+                ]
+            },
+            {
+                question: "Мы работаем, вы отдыхаете",
+                answers: [
+                    { text: "Indesit", correct: true, image: "images/indesit.jpg" },				
+                    { text: "Bosch", correct: false, image: "images/bosch.jpg" },
+                    { text: "LG", correct: false, image: "images/lg.jpg" },
+                    { text: "Samsung", correct: false, image: "images/samsung.jpg" }
+                ]
+            },
+            {
+                question: "Изменим жизнь к лучшему",
+                answers: [
+                    { text: "Philips", correct: true, image: "images/philips3.jpg" },				
+                    { text: "Panasonic", correct: false, image: "images/panasonic3.jpg" },
+                    { text: "Bosch", correct: false, image: "images/bosch3.jpg" },
+                    { text: "Samsung", correct: false, image: "images/samsung3.jpg" }
+                ]
+            },
+            {
+                question: "CD и слушай",
+                answers: [
+                    { text: "Sony", correct: true, image: "images/sony3.jpg" },				
+                    { text: "Panasonic", correct: false, image: "images/panasonic3.jpg" },
+                    { text: "Philips", correct: false, image: "images/philips3.jpg" },
+                    { text: "Samsung", correct: false, image: "images/samsung3.jpg" }
                 ]
             },			
             {
