--- a/mindex.html
+++ b/mindex.html
@@ -1734,6 +1734,15 @@
                     { text: "Philips", correct: false, image: "images/philips3.jpg" },
                     { text: "Samsung", correct: false, image: "images/samsung3.jpg" }
                 ]
+            },
+            {
+                question: "Мы заботимся о вас",
+                answers: [
+                    { text: "Tefal", correct: true, image: "images/tefal4.jpg" },				
+                    { text: "LG", correct: false, image: "images/lg4.jpg" },
+                    { text: "Philips", correct: false, image: "images/philips4.jpg" },
+                    { text: "Braun", correct: false, image: "images/braun4.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
