--- a/mindex.html
+++ b/mindex.html
@@ -1743,6 +1743,15 @@
                     { text: "Philips", correct: false, image: "images/philips4.jpg" },
                     { text: "Braun", correct: false, image: "images/braun4.jpg" }
                 ]
+            },
+            {
+                question: "Доставляется к пиву",
+                answers: [
+                    { text: "BEERka", correct: true, image: "images/beerka.jpg" },				
+                    { text: "Фишка", correct: false, image: "images/fishka.jpg" },
+                    { text: "Кириешки", correct: false, image: "images/kirieshki.jpg" },
+                    { text: "ХрусTeam", correct: false, image: "images/hrusteam.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
