--- a/mindex.html
+++ b/mindex.html
@@ -1752,6 +1752,15 @@
                     { text: "Кириешки", correct: false, image: "images/kirieshki.jpg" },
                     { text: "ХрусTeam", correct: false, image: "images/hrusteam.jpg" }
                 ]
+            },
+            {
+                question: "Попробовав раз, ем и сейчас",
+                answers: [
+                    { text: "Pringles", correct: true, image: "images/pringles.jpg" },				
+                    { text: "Lay’s", correct: false, image: "images/lays.jpg" },
+                    { text: "Cheetos", correct: false, image: "images/cheetos.jpg" },
+                    { text: "Estrella", correct: false, image: "images/estrella.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
