--- a/mindex.html
+++ b/mindex.html
@@ -1761,6 +1761,15 @@
                     { text: "Cheetos", correct: false, image: "images/cheetos.jpg" },
                     { text: "Estrella", correct: false, image: "images/estrella.jpg" }
                 ]
+            },
+            {
+                question: "Рыбное избранное",
+                answers: [
+                    { text: "Русское море", correct: true, image: "images/more.jpg" },				
+                    { text: "Matias", correct: false, image: "images/matias.jpg" },
+                    { text: "Vici", correct: false, image: "images/vici.jpg" },
+                    { text: "Santa Bremor", correct: false, image: "images/santa.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
