--- a/mindex.html
+++ b/mindex.html
@@ -1770,6 +1770,15 @@
                     { text: "Vici", correct: false, image: "images/vici.jpg" },
                     { text: "Santa Bremor", correct: false, image: "images/santa.jpg" }
                 ]
+            },
+            {
+                question: "Пельмешки без спешки",
+                answers: [
+                    { text: "Сам Самыч", correct: true, image: "images/samsam.jpg" },				
+                    { text: "Дарья", correct: false, image: "images/darya.jpg" },
+                    { text: "Мираторг", correct: false, image: "images/miratorg.jpg" },
+                    { text: "Пельмени Тюмени", correct: false, image: "images/tumen.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
