--- a/mindex.html
+++ b/mindex.html
@@ -1779,14 +1779,23 @@
                     { text: "Мираторг", correct: false, image: "images/miratorg.jpg" },
                     { text: "Пельмени Тюмени", correct: false, image: "images/tumen.jpg" }
                 ]
+            },
+            {
+                question: "Хочешь похудеть? Спроси меня как!",
+                answers: [
+                    { text: "Herbalife", correct: true, image: "images/herbalife.jpg" },				
+                    { text: "Эвалар", correct: false, image: "images/evalar.jpg" },
+                    { text: "Леовит", correct: false, image: "images/leovit.jpg" },
+                    { text: "Ozempic", correct: false, image: "images/ozempic.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
-					answers: [
-						{ text: "Евросеть", correct: true, image: "images/euroset.jpg" },
-						{ text: "М.Видео", correct: false, image: "images/mvideo.jpg" },
-						{ text: "Эльдорадо", correct: false, image: "images/eldorado.jpg" },
-						{ text: "Textasy", correct: false, image: "images/textasy.jpg" }
+				answers: [
+					{ text: "Евросеть", correct: true, image: "images/euroset.jpg" },
+					{ text: "М.Видео", correct: false, image: "images/mvideo.jpg" },
+					{ text: "Эльдорадо", correct: false, image: "images/eldorado.jpg" },
+					{ text: "Textasy", correct: false, image: "images/textasy.jpg" }
                 ]
             }			
 			
