--- a/mindex.html
+++ b/mindex.html
@@ -1788,6 +1788,15 @@
                     { text: "Леовит", correct: false, image: "images/leovit.jpg" },
                     { text: "Ozempic", correct: false, image: "images/ozempic.jpg" }
                 ]
+            },
+            {
+                question: "Для носов и носиков",
+                answers: [
+                    { text: "Називин", correct: true, image: "images/nazivin.jpg" },				
+                    { text: "Отривин", correct: false, image: "images/otrivin.jpg" },
+                    { text: "Риностоп", correct: false, image: "images/rinostop.jpg" },
+                    { text: "Ксилен", correct: false, image: "images/ksilen.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
