--- a/mindex.html
+++ b/mindex.html
@@ -1797,6 +1797,15 @@
                     { text: "Риностоп", correct: false, image: "images/rinostop.jpg" },
                     { text: "Ксилен", correct: false, image: "images/ksilen.jpg" }
                 ]
+            },
+            {
+                question: "Лёгок на подъем",
+                answers: [
+                    { text: "Аэрофлот", correct: true, image: "images/aeroflot.jpg" },				
+                    { text: "S7 Airlines", correct: false, image: "images/s7.jpg" },
+                    { text: "Победа", correct: false, image: "images/pobeda.jpg" },
+                    { text: "Уральские авиалинии", correct: false, image: "images/uralair.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
