--- a/mindex.html
+++ b/mindex.html
@@ -1806,6 +1806,15 @@
                     { text: "Победа", correct: false, image: "images/pobeda.jpg" },
                     { text: "Уральские авиалинии", correct: false, image: "images/uralair.jpg" }
                 ]
+            },
+            {
+                question: "Скажешь у меня нет вкуса?",
+                answers: [
+                    { text: "Winston", correct: true, image: "images/winston.jpg" },				
+                    { text: "Marlboro", correct: false, image: "images/marlboro.jpg" },
+                    { text: "Camel", correct: false, image: "images/camel.jpg" },
+                    { text: "Lucky Strike", correct: false, image: "images/strike.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
