--- a/mindex.html
+++ b/mindex.html
@@ -1815,6 +1815,15 @@
                     { text: "Camel", correct: false, image: "images/camel.jpg" },
                     { text: "Lucky Strike", correct: false, image: "images/strike.jpg" }
                 ]
+            },
+            {
+                question: "Мы сидим, а денежки идут",
+                answers: [
+                    { text: "Телемаркет", correct: true, image: "images/telemarket.jpg" },				
+                    { text: "Shop24", correct: false, image: "images/shop24.jpg" },
+                    { text: "TopShop", correct: false, image: "images/topshop.jpg" },
+                    { text: "HSE24", correct: false, image: "images/hse24.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
