--- a/mindex.html
+++ b/mindex.html
@@ -1824,6 +1824,15 @@
                     { text: "TopShop", correct: false, image: "images/topshop.jpg" },
                     { text: "HSE24", correct: false, image: "images/hse24.jpg" }
                 ]
+            },
+            {
+                question: "Победа над дорогой",
+                answers: [
+                    { text: "Bridgestone", correct: true, image: "images/bridgestone.jpg" },				
+                    { text: "Michelin", correct: false, image: "images/michelin.jpg" },
+                    { text: "Goodyear", correct: false, image: "images/goodyear.jpg" },
+                    { text: "Pirelli", correct: false, image: "images/pirelli.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
