--- a/mindex.html
+++ b/mindex.html
@@ -1833,6 +1833,15 @@
                     { text: "Goodyear", correct: false, image: "images/goodyear.jpg" },
                     { text: "Pirelli", correct: false, image: "images/pirelli.jpg" }
                 ]
+            },
+            {
+                question: "Работа, приятная на ощупь",
+                answers: [
+                    { text: "Erich Krause", correct: true, image: "images/erichkrause.jpg" },				
+                    { text: "Stabilo", correct: false, image: "images/stabilo.jpg" },
+                    { text: "Faber-Castell", correct: false, image: "images/fabercastell.jpg" },
+                    { text: "Pentel", correct: false, image: "images/pentel.jpg" }
+                ]
             },			
             {
 				question: "Цены просто о*уеть",
